[gd_scene load_steps=8 format=3 uid="uid://bb0jwatsbquk5"]

[ext_resource type="Script" path="res://Scripts/Life_grass.gd" id="1_fmpul"]
[ext_resource type="Texture2D" uid="uid://bbletb5j0buo8" path="res://Art/grass_1.png" id="2_hkb2j"]
[ext_resource type="Texture2D" uid="uid://bfae5syr2y1x4" path="res://Art/grass_2.png" id="3_c6r1m"]
[ext_resource type="Texture2D" uid="uid://cqvae5p2edsqf" path="res://Art/grass_dead.png" id="4_r85gf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dldvs"]
size = Vector2(32, 64)

[node name="Grass" type="CharacterBody2D"]
position = Vector2(1000, 1000)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_fmpul")

[node name="Timer" type="Timer" parent="."]

[node name="Vision" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Sprites_manager_0" type="Node2D" parent="."]

[node name="Sprite_0" type="Sprite2D" parent="Sprites_manager_0"]
texture = ExtResource("2_hkb2j")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_1" type="Sprite2D" parent="Sprites_manager_0"]
visible = false
texture = ExtResource("3_c6r1m")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="Sprites_manager_0"]
visible = false
texture = ExtResource("4_r85gf")
centered = false
offset = Vector2(0, -32)

[node name="Sprites_manager_1" type="Node2D" parent="."]
visible = false

[node name="Sprite_0" type="Sprite2D" parent="Sprites_manager_1"]
texture = ExtResource("2_hkb2j")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_1" type="Sprite2D" parent="Sprites_manager_1"]
visible = false
texture = ExtResource("3_c6r1m")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="Sprites_manager_1"]
visible = false
texture = ExtResource("4_r85gf")
centered = false
offset = Vector2(0, -32)

[node name="Sprites_manager_2" type="Node2D" parent="."]
visible = false

[node name="Sprite_0" type="Sprite2D" parent="Sprites_manager_2"]
texture = ExtResource("2_hkb2j")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_1" type="Sprite2D" parent="Sprites_manager_2"]
visible = false
texture = ExtResource("3_c6r1m")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="Sprites_manager_2"]
visible = false
texture = ExtResource("4_r85gf")
centered = false
offset = Vector2(0, -32)

[node name="Sprites_manager_3" type="Node2D" parent="."]
visible = false

[node name="Sprite_0" type="Sprite2D" parent="Sprites_manager_3"]
texture = ExtResource("2_hkb2j")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_1" type="Sprite2D" parent="Sprites_manager_3"]
visible = false
texture = ExtResource("3_c6r1m")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="Sprites_manager_3"]
visible = false
texture = ExtResource("4_r85gf")
centered = false
offset = Vector2(0, -32)

[node name="Sprites_manager_4" type="Node2D" parent="."]
visible = false

[node name="Sprite_0" type="Sprite2D" parent="Sprites_manager_4"]
texture = ExtResource("2_hkb2j")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_1" type="Sprite2D" parent="Sprites_manager_4"]
visible = false
texture = ExtResource("3_c6r1m")
centered = false
offset = Vector2(0, -64)

[node name="Dead_Sprite_0" type="Sprite2D" parent="Sprites_manager_4"]
visible = false
texture = ExtResource("4_r85gf")
centered = false
offset = Vector2(0, -32)

[node name="Collision_0_0" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dv5i7")

[node name="Collision_0_1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dldvs")

[node name="Collision_1_0" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dv5i7")
disabled = true

[node name="Collision_1_1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dldvs")
disabled = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
